feat: auto-discover primary agents from .agent/*.md files
- Replace hardcoded primary_agents dict with glob-based discovery
- Add configuration maps for display names, ordering, tools, temps
- Agents now auto-discovered from ~/.aidevops/agents/*.md
- Adding new primary agent only requires creating .md file
- Add secretlint as dev dependency

--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "elysia": "^1.1.0"
   },
   "devDependencies": {
+    "@secretlint/secretlint-rule-preset-recommend": "^11.2.5",
     "@types/bun": "latest",
+    "secretlint": "^11.2.5",
     "typescript": "^5.0.0"
   },
   "peerDependencies": {
