--- a/.github/workflows/code-review-monitoring.yml
+++ b/.github/workflows/code-review-monitoring.yml
@@ -27,10 +27,10 @@ jobs:
         fetch-depth: 0
         token: ${{ secrets.GITHUB_TOKEN }}
     
-    - name: 🔧 Setup Node.js
-      uses: actions/setup-node@v4
+    - name: 🔧 Setup Bun
+      uses: oven-sh/setup-bun@v2
       with:
-        node-version: '20'
+        bun-version: latest
     
     - name: 🐍 Setup Python
       uses: actions/setup-python@v5
@@ -42,8 +42,8 @@ jobs:
         # Install jq for JSON processing
         sudo apt-get update && sudo apt-get install -y jq curl
         
-        # Install TOON CLI
-        npm install -g @toon-format/cli
+        # Install TOON CLI (Bun for faster install)
+        bun install -g @toon-format/cli
         
         # Install Python dependencies for quality tools
         pip install --upgrade pip
