fix: resolve SonarCloud critical issues and website docs push conflict
SonarCloud fixes:
- toon-helper.sh: add explicit return to get_pkg_runner()
- list-keys-helper.sh: add default cases to 5 case statements
- keyword-research-helper.sh: add default cases to 4 case statements

Workflow fix:
- update-website-docs.yml: add git pull --rebase before push to handle concurrent updates

--- a/.github/workflows/update-website-docs.yml
+++ b/.github/workflows/update-website-docs.yml
@@ -223,6 +223,8 @@ jobs:
           Triggered by: ${{ github.event_name }}
           Source commit: ${{ github.sha }}"
           
+          # Pull with rebase to handle concurrent pushes, then push
+          git pull --rebase origin main || true
           git push
 
       - name: Summary
