fix: add S6506 (HTTPS not enforced) to SonarCloud exclusions
The curl|bash pattern for official installers triggers both:
- S5332: clear-text protocol
- S6506: HTTPS not enforced (redirect risk)

Both are false positives for verified official installers like bun.sh

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -28,7 +28,7 @@ sonar.cpd.exclusions=configs/**/*.txt,.agent/**/*.md,templates/**/*.md
 # - HTTP localhost: Safe internal traffic for local dev servers (localhost:port)
 # - HTTP protocol detection: Checking for insecure URLs, not using them
 # - curl|bash installers: Official installers from verified HTTPS sources
-sonar.issue.ignore.multicriteria=e1,e2,e3,e4,e5,e6
+sonar.issue.ignore.multicriteria=e1,e2,e3,e4,e5,e6,e7,e8,e9
 
 # Ignore "npm install without --ignore-scripts" (shell:S6505) - required for CLI tool installation
 sonar.issue.ignore.multicriteria.e1.ruleKey=shell:S6505
@@ -50,6 +50,16 @@ sonar.issue.ignore.multicriteria.e5.resourceKey=**/*-setup.sh
 
 sonar.issue.ignore.multicriteria.e6.ruleKey=shell:S5332
 sonar.issue.ignore.multicriteria.e6.resourceKey=**/*-cli.sh
+
+# Ignore "HTTPS not enforced" (shell:S6506) - curl|bash for official installers from verified sources
+sonar.issue.ignore.multicriteria.e7.ruleKey=shell:S6506
+sonar.issue.ignore.multicriteria.e7.resourceKey=**/*-helper.sh
+
+sonar.issue.ignore.multicriteria.e8.ruleKey=shell:S6506
+sonar.issue.ignore.multicriteria.e8.resourceKey=**/*-setup.sh
+
+sonar.issue.ignore.multicriteria.e9.ruleKey=shell:S6506
+sonar.issue.ignore.multicriteria.e9.resourceKey=**/*-cli.sh
 
 # Project metadata
 sonar.links.homepage=https://github.com/marcusquinn/aidevops
