fix: add *-verify.sh to SonarCloud exclusions
webhosting-verify.sh tests HTTP->HTTPS redirects, which requires
making HTTP requests to verify the redirect works correctly.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -28,7 +28,7 @@ sonar.cpd.exclusions=configs/**/*.txt,.agent/**/*.md,templates/**/*.md
 # - HTTP localhost: Safe internal traffic for local dev servers (localhost:port)
 # - HTTP protocol detection: Checking for insecure URLs, not using them
 # - curl|bash installers: Official installers from verified HTTPS sources
-sonar.issue.ignore.multicriteria=e1,e2,e3,e4,e5,e6,e7,e8,e9
+sonar.issue.ignore.multicriteria=e1,e2,e3,e4,e5,e6,e7,e8,e9,e10,e11
 
 # Ignore "npm install without --ignore-scripts" (shell:S6505) - required for CLI tool installation
 sonar.issue.ignore.multicriteria.e1.ruleKey=shell:S6505
@@ -60,6 +60,13 @@ sonar.issue.ignore.multicriteria.e8.resourceKey=**/*-setup.sh
 
 sonar.issue.ignore.multicriteria.e9.ruleKey=shell:S6506
 sonar.issue.ignore.multicriteria.e9.resourceKey=**/*-cli.sh
+
+# Ignore S5332/S6506 for verify scripts (HTTP redirect testing requires HTTP)
+sonar.issue.ignore.multicriteria.e10.ruleKey=shell:S5332
+sonar.issue.ignore.multicriteria.e10.resourceKey=**/*-verify.sh
+
+sonar.issue.ignore.multicriteria.e11.ruleKey=shell:S6506
+sonar.issue.ignore.multicriteria.e11.resourceKey=**/*-verify.sh
 
 # Project metadata
 sonar.links.homepage=https://github.com/marcusquinn/aidevops
