feat: migrate loop state to .agent/loop-state and enhance re-anchor
BREAKING CHANGE: Loop state files moved from .claude/ to .agent/loop-state/

- Migrate state directory from .claude/ to .agent/loop-state/
- Add backward compatibility to check both old and new locations
- Enhance loop_generate_reanchor() with single-task extraction (Loom's pin concept)
- Add Linkage section to plans-template.md for spec-as-lookup-table pattern
- Update all documentation to reflect new paths

--- a/.gitignore
+++ b/.gitignore
@@ -184,6 +184,9 @@ test-*.yaml
 .cursor/
 .factory/
 
+# Loop state files (local to each worktree, not committed)
+.agent/loop-state/
+
 # Superset local config
 .superset/
 
