--- a/.github/workflows/publish-packages.yml
+++ b/.github/workflows/publish-packages.yml
@@ -29,16 +29,20 @@ jobs:
       
       - name: Get version
         id: version
+        env:
+          INPUT_VERSION: ${{ github.event.inputs.version }}
         run: |
-          if [ -n "${{ github.event.inputs.version }}" ]; then
-            echo "version=${{ github.event.inputs.version }}" >> $GITHUB_OUTPUT
+          if [ -n "$INPUT_VERSION" ]; then
+            echo "version=$INPUT_VERSION" >> $GITHUB_OUTPUT
           else
             echo "version=$(cat VERSION)" >> $GITHUB_OUTPUT
           fi
       
       - name: Update package.json version
+        env:
+          PKG_VERSION: ${{ steps.version.outputs.version }}
         run: |
-          npm version ${{ steps.version.outputs.version }} --no-git-tag-version --allow-same-version
+          npm version "$PKG_VERSION" --no-git-tag-version --allow-same-version
       
       - name: Publish to npm
         run: npm publish --provenance --access public
@@ -46,10 +50,12 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN_MARCUSQUINN }}
       
       - name: Summary
+        env:
+          PKG_VERSION: ${{ steps.version.outputs.version }}
         run: |
           echo "## npm Package Published" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "**Version:** ${{ steps.version.outputs.version }}" >> $GITHUB_STEP_SUMMARY
+          echo "**Version:** $PKG_VERSION" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "Install with:" >> $GITHUB_STEP_SUMMARY
           echo "\`\`\`bash" >> $GITHUB_STEP_SUMMARY
@@ -69,27 +75,36 @@ jobs:
       
       - name: Get version and SHA
         id: release
+        env:
+          INPUT_VERSION: ${{ github.event.inputs.version }}
         run: |
-          if [ -n "${{ github.event.inputs.version }}" ]; then
-            VERSION="${{ github.event.inputs.version }}"
+          if [ -n "$INPUT_VERSION" ]; then
+            VERSION="$INPUT_VERSION"
           else
             VERSION=$(cat VERSION)
           fi
           echo "version=$VERSION" >> $GITHUB_OUTPUT
           
-          # Get SHA256 of the release tarball
+          # Get SHA256 of the release tarball (fail on HTTP errors)
           TARBALL_URL="https://github.com/marcusquinn/aidevops/archive/refs/tags/v${VERSION}.tar.gz"
-          SHA256=$(curl -sL "$TARBALL_URL" | sha256sum | cut -d' ' -f1)
+          if ! SHA256=$(curl -fsSL "$TARBALL_URL" | sha256sum | cut -d' ' -f1); then
+            echo "::error::Failed to download tarball for SHA256 calculation"
+            exit 1
+          fi
           echo "sha256=$SHA256" >> $GITHUB_OUTPUT
       
       - name: Update Homebrew formula
+        env:
+          RELEASE_VERSION: ${{ steps.release.outputs.version }}
+          RELEASE_SHA256: ${{ steps.release.outputs.sha256 }}
         run: |
           # Update the formula with new version and SHA
-          sed -i "s|url \"https://github.com/marcusquinn/aidevops/archive/refs/tags/v.*\.tar\.gz\"|url \"https://github.com/marcusquinn/aidevops/archive/refs/tags/v${{ steps.release.outputs.version }}.tar.gz\"|" homebrew/aidevops.rb
-          sed -i "s|sha256 \".*\"|sha256 \"${{ steps.release.outputs.sha256 }}\"|" homebrew/aidevops.rb
+          sed -i "s|url \"https://github.com/marcusquinn/aidevops/archive/refs/tags/v.*\.tar\.gz\"|url \"https://github.com/marcusquinn/aidevops/archive/refs/tags/v${RELEASE_VERSION}.tar.gz\"|" homebrew/aidevops.rb
+          sed -i "s|sha256 \".*\"|sha256 \"${RELEASE_SHA256}\"|" homebrew/aidevops.rb
       
       - name: Push to homebrew-tap repo
-        uses: dmnemec/copy_file_to_another_repo_action@main
+        # Pinned to commit SHA for security
+        uses: dmnemec/copy_file_to_another_repo_action@bbebd3da22e4a37d04dca5f782edd5201cb97083
         env:
           API_TOKEN_GITHUB: ${{ secrets.HOMEBREW_TAP_TOKEN }}
         with:
@@ -102,11 +117,14 @@ jobs:
         continue-on-error: true
       
       - name: Summary
+        env:
+          RELEASE_VERSION: ${{ steps.release.outputs.version }}
+          RELEASE_SHA256: ${{ steps.release.outputs.sha256 }}
         run: |
           echo "## Homebrew Tap Updated" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "**Version:** ${{ steps.release.outputs.version }}" >> $GITHUB_STEP_SUMMARY
-          echo "**SHA256:** ${{ steps.release.outputs.sha256 }}" >> $GITHUB_STEP_SUMMARY
+          echo "**Version:** $RELEASE_VERSION" >> $GITHUB_STEP_SUMMARY
+          echo "**SHA256:** $RELEASE_SHA256" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "Install with:" >> $GITHUB_STEP_SUMMARY
           echo "\`\`\`bash" >> $GITHUB_STEP_SUMMARY
