fix: address remaining CodeRabbit review feedback
- Remove redundant redirection in detect_unregistered_repo()
- Use safe arithmetic increment (removed=$((removed+1))) to avoid set -e issues
- Add explicit returns to init_repos_file() and cmd_detect()
- Include templates/ in package.json files array for setup.sh

--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "aidevops.sh",
     "setup.sh",
     "VERSION",
-    "scripts/npm-postinstall.js"
+    "scripts/npm-postinstall.js",
+    "templates/"
   ],
   "repository": {
     "type": "git",
