refactor: keep S1481 and S1066 rules active for new code
Address review feedback from Gemini Code Assist:
- Remove exclusions for S1481 (unused variables) and S1066 (collapsible ifs)
- These rules catch real issues and should remain active for new code
- Keep exclusions only for truly stylistic rules specific to this framework

Excluded rules (framework-specific patterns):
- S7679: Positional parameters (idiomatic shell argument parsing)
- S1192: String literals (intentional color codes, log prefixes)
- S7677: Error messages to stderr (UX-focused colored output)
- S1135: TODO comments (tracked intentionally)
- S131: Missing default case (handled at dispatch level)
- S7682: Explicit return statements (shell convention)

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -28,7 +28,7 @@ sonar.cpd.exclusions=configs/**/*.txt,.agent/**/*.md,templates/**/*.md
 # - HTTP localhost: Safe internal traffic for local dev servers (localhost:port)
 # - HTTP protocol detection: Checking for insecure URLs, not using them
 # - curl|bash installers: Official installers from verified HTTPS sources
-sonar.issue.ignore.multicriteria=e1,e2,e3,e4,e5,e6,e7,e8,e9,e10,e11,e12,e13,e14,e15,e16,e17,e18,e19
+sonar.issue.ignore.multicriteria=e1,e2,e3,e4,e5,e6,e7,e8,e9,e10,e11,e12,e13,e14,e15,e16,e17
 
 # Ignore "npm install without --ignore-scripts" (shell:S6505) - required for CLI tool installation
 sonar.issue.ignore.multicriteria.e1.ruleKey=shell:S6505
@@ -91,25 +91,18 @@ sonar.issue.ignore.multicriteria.e14.resourceKey=**/*.sh
 sonar.issue.ignore.multicriteria.e15.ruleKey=shell:S1135
 sonar.issue.ignore.multicriteria.e15.resourceKey=**/*.sh
 
-# S1481: Unused variables - Some variables are set for future use or debugging
-# Shell scripts often declare variables that may be used conditionally
-sonar.issue.ignore.multicriteria.e16.ruleKey=shell:S1481
-sonar.issue.ignore.multicriteria.e16.resourceKey=**/*.sh
-
-# S1066: Collapsible if statements - Nested ifs often improve readability
-# Separating conditions makes debugging and modification easier
-sonar.issue.ignore.multicriteria.e17.ruleKey=shell:S1066
-sonar.issue.ignore.multicriteria.e17.resourceKey=**/*.sh
+# Note: S1481 (unused variables) and S1066 (collapsible ifs) are NOT excluded
+# These rules catch real issues and should be fixed in new code
 
 # S131: Missing default case - Many case statements intentionally skip unknown options
 # The framework handles unknown commands at the main dispatch level
-sonar.issue.ignore.multicriteria.e18.ruleKey=shell:S131
-sonar.issue.ignore.multicriteria.e18.resourceKey=**/*.sh
+sonar.issue.ignore.multicriteria.e16.ruleKey=shell:S131
+sonar.issue.ignore.multicriteria.e16.resourceKey=**/*.sh
 
 # S7682: Explicit return statements - Functions use implicit returns where appropriate
 # Shell convention allows implicit return 0 for successful functions
-sonar.issue.ignore.multicriteria.e19.ruleKey=shell:S7682
-sonar.issue.ignore.multicriteria.e19.resourceKey=**/*.sh
+sonar.issue.ignore.multicriteria.e17.ruleKey=shell:S7682
+sonar.issue.ignore.multicriteria.e17.resourceKey=**/*.sh
 
 # Project metadata
 sonar.links.homepage=https://github.com/marcusquinn/aidevops
