docs: add && aidevops update to npm/bun/brew install commands
Updated all installation commands across documentation and scripts to include
'&& aidevops update' suffix, ensuring agents are deployed after package install.

Files updated:
- README.md (main installation section and footer)
- aidevops.sh (help command output)
- .agent/AGENTS.md (getting started section)
- .agent/scripts/version-manager.sh (release notes template)
- .github/workflows/publish-packages.yml (job summaries)
- homebrew/aidevops.rb (install comments)

--- a/.github/workflows/publish-packages.yml
+++ b/.github/workflows/publish-packages.yml
@@ -63,7 +63,7 @@ jobs:
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "Install with:" >> $GITHUB_STEP_SUMMARY
           echo "\`\`\`bash" >> $GITHUB_STEP_SUMMARY
-          echo "npm install -g aidevops" >> $GITHUB_STEP_SUMMARY
+          echo "npm install -g aidevops && aidevops update" >> $GITHUB_STEP_SUMMARY
           echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
 
   update-homebrew-tap:
@@ -132,7 +132,7 @@ jobs:
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "Install with:" >> $GITHUB_STEP_SUMMARY
           echo "\`\`\`bash" >> $GITHUB_STEP_SUMMARY
-          echo "brew install marcusquinn/tap/aidevops" >> $GITHUB_STEP_SUMMARY
+          echo "brew install marcusquinn/tap/aidevops && aidevops update" >> $GITHUB_STEP_SUMMARY
           echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "**Note:** If the tap repo doesn't exist yet, create it first:" >> $GITHUB_STEP_SUMMARY
