fix: improve secretlint performance by adding ignore patterns
- Add python-env, .osgrep, .scannerwork to .secretlintignore
- Increase Docker timeout from 30s to 60s
- Add t063 task to TODO.md

Fixes scanning 19,790 files (572MB) down to ~230 files.
Resolves 60+ minute hangs when running linters-local.sh.

--- a/.secretlintignore
+++ b/.secretlintignore
@@ -105,3 +105,14 @@
 
 # Template files (contain example configurations)
 **/templates/**
+
+# Python virtual environments (mirror .gitignore)
+**/python-env/**
+**/env/**
+
+# Tool caches and indexes (mirror .gitignore)
+**/.osgrep/**
+**/.scannerwork/**
+
+# Lock files
+**/bun.lock
