docs: clarify env pattern intent in .secretlintignore
- Document that env/ mirrors .gitignore convention
- Note venv/.venv already covered in Dependencies section

--- a/.secretlintignore
+++ b/.secretlintignore
@@ -107,6 +107,8 @@
 **/templates/**
 
 # Python virtual environments (mirror .gitignore)
+# Note: **/env/ is broad but matches .gitignore convention for venvs
+# venv/.venv already in Dependencies section above
 **/python-env/
 **/env/
 
