fix(linters): add --init flag to docker secretlint for proper signal handling
- Add --init flag to docker run to prevent zombie processes and ensure clean shutdown
- Remove trailing whitespace throughout linters-local.sh
- Add clarifying comment for env pattern in .secretlintignore

--- a/.secretlintignore
+++ b/.secretlintignore
@@ -107,6 +107,7 @@
 **/templates/**
 
 # Python virtual environments (mirror .gitignore)
+# Note: **/env/** is broad but matches .gitignore convention for venvs
 **/python-env/**
 **/env/**
 
