fix: add .env* patterns to secretlintignore
Addresses CodeRabbit feedback - exclude dotenv files from secret scanning.
These files contain secrets by design and are already in .gitignore (lines 18, 43-44).

Patterns added:
- .env
- .env*
- *.env

--- a/.secretlintignore
+++ b/.secretlintignore
@@ -106,6 +106,12 @@
 # Template files (contain example configurations)
 **/templates/**
 
+# Environment files (mirror .gitignore lines 18, 43-44)
+# These contain secrets by design and are gitignored
+.env
+.env*
+*.env
+
 # Python virtual environments (mirror .gitignore)
 # Note: **/env/** is broad but matches .gitignore convention for venvs
 **/python-env/**
