fix: add recursive .env patterns for subdirectories
Addresses CodeRabbit feedback - patterns like .env* only match root level.
Added **/.env, **/.env*, **/*.env to catch env files in nested folders
like packages/ or services/.

--- a/.secretlintignore
+++ b/.secretlintignore
@@ -108,9 +108,14 @@
 
 # Environment files (mirror .gitignore lines 18, 43-44)
 # These contain secrets by design and are gitignored
+# Root-level patterns
 .env
 .env*
 *.env
+# Recursive patterns for subdirectories
+**/.env
+**/.env*
+**/*.env
 
 # Python virtual environments (mirror .gitignore)
 # Note: **/env/** is broad but matches .gitignore convention for venvs
