--- a/.secretlintignore
+++ b/.secretlintignore
@@ -106,7 +106,19 @@
 # Template files (contain example configurations)
 **/templates/**
 
+# Environment files (mirror .gitignore lines 18, 43-44)
+# These contain secrets by design and are gitignored
+# Root-level patterns
+.env
+.env*
+*.env
+# Recursive patterns for subdirectories
+**/.env
+**/.env*
+**/*.env
+
 # Python virtual environments (mirror .gitignore)
+# Note: **/env/** is broad but matches .gitignore convention for venvs
 **/python-env/**
 **/env/**
 
