fix: add concurrency to all GitHub workflows
Prevents duplicate workflow runs and reduces email noise when
pushing multiple commits in quick succession.

All workflows now use:
  concurrency:
    group: ${{ github.workflow }}-${{ github.ref }}
    cancel-in-progress: true

Workflows updated:
- code-quality.yml
- code-review-monitoring.yml
- postflight.yml
- publish-packages.yml
- sync-wiki.yml
- update-website-docs.yml
- version-validation.yml

--- a/.github/workflows/publish-packages.yml
+++ b/.github/workflows/publish-packages.yml
@@ -9,6 +9,10 @@ on:
         description: 'Version to publish (e.g., 2.52.1)'
         required: true
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   publish-npm:
     name: Publish to npm
