--- a/.github/workflows/postflight.yml
+++ b/.github/workflows/postflight.yml
@@ -9,6 +9,10 @@ on:
         description: 'Tag to verify (leave empty for latest)'
         required: false
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   postflight:
     name: Verify Release Health
