--- a/.github/workflows/sync-wiki.yml
+++ b/.github/workflows/sync-wiki.yml
@@ -7,6 +7,10 @@ on:
     paths:
       - '.wiki/**'
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   sync-wiki:
     name: Sync Wiki to GitHub
