fix: catch updown api key secrets with secretlint

--- a/.secretlintrc.json
+++ b/.secretlintrc.json
@@ -76,6 +76,18 @@
           }
         }
       ]
+    },
+    {
+      "id": "@secretlint/secretlint-rule-regexp",
+      "options": {
+        "patterns": [
+          {
+            "name": "updown-api-key",
+            "pattern": "\"api_key\"\\s*:\\s*\"[a-z0-9]{20,}\"",
+            "message": "Detected a likely Updown API key in repository files."
+          }
+        ]
+      }
     }
   ]
 }
