--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "devDependencies": {
     "@secretlint/secretlint-rule-preset-recommend": "^11.2.5",
+    "@secretlint/secretlint-rule-regexp": "^11.2.5",
     "@types/bun": "latest",
     "secretlint": "^11.2.5",
     "typescript": "^5.0.0"
