--- a/.secretlintrc.json
+++ b/.secretlintrc.json
@@ -82,9 +82,9 @@
       "options": {
         "patterns": [
           {
-            "name": "updown-api-key",
-            "pattern": "\"api_key\"\\s*:\\s*\"[a-z0-9]{20,}\"",
-            "message": "Detected a likely Updown API key in repository files."
+            "name": "api-key-field",
+            "pattern": "\"(?:api_key|apiKey|API_KEY)\"\\s*:\\s*\"[A-Za-z0-9_\\-]{16,}\"",
+            "message": "Detected a likely API key value in an api_key field."
           }
         ]
       }
