fix: catch updown api key secrets with secretlint (#291)
* fix: catch updown api key secrets with secretlint

* fix: broaden api_key regex detection

--- a/.secretlintrc.json
+++ b/.secretlintrc.json
@@ -76,6 +76,18 @@
           }
         }
       ]
+    },
+    {
+      "id": "@secretlint/secretlint-rule-regexp",
+      "options": {
+        "patterns": [
+          {
+            "name": "api-key-field",
+            "pattern": "\"(?:api_key|apiKey|API_KEY)\"\\s*:\\s*\"[A-Za-z0-9_\\-]{16,}\"",
+            "message": "Detected a likely API key value in an api_key field."
+          }
+        ]
+      }
     }
   ]
 }
