feat: add aidevops secret command with gopass backend and output redaction
Part B of t131 gopass integration. Creates secret-helper.sh providing:

- aidevops secret set NAME (interactive hidden input -> gopass)
- aidevops secret list (names only, never values)
- aidevops secret run CMD (inject all secrets, redact output)
- aidevops secret NAME -- CMD (inject specific secrets, redact output)
- aidevops secret init (initialize gopass store)
- aidevops secret import-credentials (migrate from credentials.sh)
- aidevops secret status (show backend status)

Security: secret values injected via subprocess environment, all output
automatically redacted. Falls back to credentials.sh when gopass not
available. Zero ShellCheck violations.

--- a/.gitignore
+++ b/.gitignore
@@ -39,8 +39,9 @@ authorized_keys
 !.agents/scripts/secretlint-helper.sh
 !.agents/secretlint.md
 
-# Exception for credential management script (not actual credentials)
+# Exception for credential/secret management scripts (not actual credentials)
 !.agents/scripts/credential-helper.sh
+!.agents/scripts/secret-helper.sh
 
 # Environment files
 .env*
