--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -3,6 +3,11 @@ name: Code Quality Analysis
 on:
   push:
     branches: [ main, develop ]
+    paths-ignore:
+      - 'TODO.md'
+      - 'todo/**'
+      - 'README.md'
+      - 'CHANGELOG.md'
   pull_request:
     branches: [ main ]
 
