fix: add ShellCheck enforcement to CI code-quality workflow (t135.6.3)
- Add ShellCheck lint step to framework-validation job
- Enforces error-severity violations that fail the build
- Iterates all git-tracked .sh files with gcc output format
- Mark t135.6 subtasks complete (t135.6.1/t135.6.2 done in PR #423)

--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -107,6 +107,29 @@ jobs:
         echo ""
         echo "✅ All JSON files valid"
 
+    - name: ShellCheck Lint
+      run: |
+        echo "Validating shell scripts with ShellCheck..."
+        errors=0
+
+        while IFS= read -r file; do
+          if shellcheck -S error "$file" > /dev/null 2>&1; then
+            echo "OK $file"
+          else
+            echo "FAIL $file"
+            shellcheck -S error -f gcc "$file" 2>&1
+            errors=$((errors + 1))
+          fi
+        done < <(git ls-files '*.sh')
+
+        if [ "$errors" -gt 0 ]; then
+          echo ""
+          echo "$errors script(s) failed ShellCheck (severity: error)"
+          exit 1
+        fi
+        echo ""
+        echo "All shell scripts passed ShellCheck"
+
   sonarcloud:
     name: SonarCloud Analysis
     runs-on: ubuntu-latest
