fix(setup): migration now handles .agent directories and stale symlinks (t130)
Step 2 of migrate_agent_to_agents_folder() only scanned for .agent
symlinks (-type l), missing 5 .agent directories in ~/Git/. Also
missed cleanup of stale .agent symlinks where .agents already existed.

Now scans for both symlinks and directories, and removes stale .agent
symlinks when .agents is already present. Also fixes .agent -> .agents
references in PLANS.md plugin system plan and adds .agents pattern to
.secretlintignore.

--- a/.secretlintignore
+++ b/.secretlintignore
@@ -44,6 +44,7 @@
 # Documentation with example credentials
 # (These contain intentional example patterns for documentation)
 **/.agent/*.md
+**/.agents/*.md
 **/.ai/*.md
 **/.claude/**
 **/.continue/**
