feat: add Claude Code destructive command safety hooks (t009)
PreToolUse hook blocks dangerous git/filesystem commands before execution:
- git checkout --, git reset --hard, git push --force, rm -rf, etc.
- Allowlists safe patterns (checkout -b, restore --staged, clean -n, temp dirs)
- Python guard script with 34 test cases (all passing)
- Installer with --project/--global/--uninstall/--test modes
- Integrated into setup.sh (both interactive and non-interactive)
- Documented in git-workflow.md with blocked/allowed tables

--- a/.gitignore
+++ b/.gitignore
@@ -64,6 +64,10 @@ credentials/
 .agents/scripts-private/
 scripts-private/
 
+# Python cache
+__pycache__/
+*.pyc
+
 # Backup files
 *.backup
 *.bak
