fix: exclude non-agent dirs from loader, update design doc status (t008.1)
- Added scripts/, hooks/, prompts/, .agent/, loop-state/ to excludeDirs
  (these contain shell scripts, Python hooks, and state files, not agents)
- Reduced agent count from 482 to 434 (cleaner namespace categorization)
- Updated aidevops-plugin.md design doc to reflect Phase 1 implementation
- Fixed package.json main field to match bun build output (dist/index.js)
- Added .gitignore for node_modules/ and dist/

--- a/.agents/plugins/opencode-aidevops/package.json
+++ b/.agents/plugins/opencode-aidevops/package.json
@@ -2,12 +2,12 @@
   "name": "opencode-aidevops",
   "version": "2.0.0",
   "description": "OpenCode plugin for aidevops - agent loader, compaction context, CLI tools",
-  "main": "dist/index.mjs",
+  "main": "dist/index.js",
   "type": "module",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.mjs"
+      "import": "./dist/index.js"
     }
   },
   "scripts": {
