chore: remove dead code and add quality tool exclusions
- Remove setup-old.sh (5,699 lines of dead code, not referenced anywhere)
  This was a CodeFactor D-rated hotspot dragging the overall grade down
- Add .codefactor.yml to exclude _archive/ scripts from analysis
- Add _archive/ to .qltyignore to exclude from maintainability scoring
  These are one-off migration/fix utilities, not production code

--- a/.qltyignore
+++ b/.qltyignore
@@ -7,6 +7,9 @@ backups/
 *.bak
 *.tmp
 
+# Archived scripts - one-off migration/fix utilities, not production code
+.agents/scripts/_archive/
+
 # Development utility scripts - not production code  
 .agent/scripts/development/
 
